force-app/main/default/objects/Settings__mdt/Settings__mdt.object-meta.xml
<CustomObject>
    <description>This will give us the ability to enable/disable certain actions/triggers in the system</description>
    <label>Settings</label>
    <pluralLabel>Settings</pluralLabel>
</CustomObject>