force-app/main/default/objects/Settings__mdt/fields/Alchemy_Portal_Dev_URL__c.field-meta.xml
<CustomField>
    <fullName>Alchemy_Portal_Dev_URL__c</fullName>
    <label>Alchemy Portal Dev URL</label>
    <type>Url</type>
</CustomField>