force-app/main/default/objects/Settings__mdt/fields/Alchemy_Production_URL__c.field-meta.xml
<CustomField>
    <fullName>Alchemy_Production_URL__c</fullName>
    <label>Alchemy Production URL</label>
    <type>Url</type>
</CustomField>