force-app/main/default/objects/Settings__mdt/fields/Allow_SAB_CTC_Bypass__c.field-meta.xml
<CustomField>
    <fullName>Allow_SAB_CTC_Bypass__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows the user to close a deal on “Single Asset (1-4 Unit)“ OR “Single Asset (5-10 Unit)“ SAB deals even when clear to close isn&apos;t marked complete.</description>
    <inlineHelpText>Allows the user to close a deal on “Single Asset (1-4 Unit)“ OR “Single Asset (5-10 Unit)“ SAB deals even when clear to close isn&apos;t marked complete.</inlineHelpText>
    <label>Allow SAB CTC Bypass</label>
    <type>Checkbox</type>
</CustomField>