force-app/main/default/objects/Settings__mdt/fields/Berkadia_CC_Emails__c.field-meta.xml
<CustomField>
    <fullName>Berkadia_CC_Emails__c</fullName>
    <description>These are the email addresses to CC when the email to request more Loan Nsmbers is sent</description>
    <inlineHelpText>These are the email addresses to CC when the email to request more Loan Nsmbers is sent</inlineHelpText>
    <label>Berkadia CC Emails</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>