force-app/main/default/objects/Settings__mdt/fields/Berkadia_To_Emails__c.field-meta.xml
<CustomField>
    <fullName>Berkadia_To_Emails__c</fullName>
    <description>These are the email addresses for ordering more Berkadia Loan Numbers</description>
    <inlineHelpText>These are the email addresses for ordering more Berkadia Loan Numbers</inlineHelpText>
    <label>Berkadia To Emails</label>
    <length>100</length>
    <type>Text</type>
</CustomField>