force-app/main/default/objects/Settings__mdt/fields/Box_As_User__c.field-meta.xml
<CustomField>
    <fullName>Box_As_User__c</fullName>
    <label>Box As User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>