force-app/main/default/objects/Settings__mdt/fields/Bridge_Cptl_Market_Post_Closing_Custodin__c.field-meta.xml
<CustomField>
    <fullName>Bridge_Cptl_Market_Post_Closing_Custodin__c</fullName>
    <description>Bridge Cptl Market Post Closing Custodin</description>
    <inlineHelpText>Bridge Cptl Market Post Closing Custodin</inlineHelpText>
    <label>Bridge Cptl Market Post Closing Custodin</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>