force-app/main/default/objects/Settings__mdt/fields/Capital_Markets_Post_Closing_return_emai__c.field-meta.xml
<CustomField>
    <fullName>Capital_Markets_Post_Closing_return_emai__c</fullName>
    <description>Capital Markets Post Closing return email</description>
    <label>Capital Markets Post Closing return emai</label>
    <length>200</length>
    <type>Text</type>
</CustomField>