force-app/main/default/objects/Settings__mdt/fields/Disable_Account_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Account_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will disable the Account Trigger</description>
    <inlineHelpText>This will disable the Account Trigger</inlineHelpText>
    <label>Disable Account Trigger</label>
    <type>Checkbox</type>
</CustomField>