force-app/main/default/objects/Settings__mdt/fields/Disable_Advance_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Advance_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will disable the Advance Trigger</description>
    <inlineHelpText>This will disable the Advance Trigger</inlineHelpText>
    <label>Disable Advance Trigger</label>
    <type>Checkbox</type>
</CustomField>