force-app/main/default/objects/Settings__mdt/fields/Disable_Commissions_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Commissions_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will disable the Commission Triggers</description>
    <inlineHelpText>This will disable the Commission Triggers</inlineHelpText>
    <label>Disable Commissions Trigger</label>
    <type>Checkbox</type>
</CustomField>