force-app/main/default/objects/Settings__mdt/fields/Disable_Contact_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Contact_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will disable the Contact Trigger</description>
    <inlineHelpText>This will disable the Contact Trigger</inlineHelpText>
    <label>Disable Contact Trigger</label>
    <type>Checkbox</type>
</CustomField>