force-app/main/default/objects/Settings__mdt/fields/Disable_Deal_Document_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Deal_Document_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will disable the Deal Document Trigger</description>
    <inlineHelpText>This will disable the Deal Document Trigger</inlineHelpText>
    <label>Disable Deal Document Trigger</label>
    <type>Checkbox</type>
</CustomField>