force-app/main/default/objects/Settings__mdt/fields/Disable_Flow_Email_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Disable_Flow_Email_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will disable email notifications triggered by Flows</description>
    <inlineHelpText>This will disable email notifications triggered by Flows</inlineHelpText>
    <label>Disable Flow Email Notifications</label>
    <type>Checkbox</type>
</CustomField>