force-app/main/default/objects/Settings__mdt/fields/Disable_Lead_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Lead_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will disable the Lead Trigger</description>
    <inlineHelpText>This will disable the Lead Trigger</inlineHelpText>
    <label>Disable Lead Trigger</label>
    <type>Checkbox</type>
</CustomField>