force-app/main/default/objects/Settings__mdt/fields/Disable_Opportunity_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Opportunity_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will disable the Opportunity/Deal Trigger</description>
    <inlineHelpText>This will disable the Opportunity/Deal Trigger</inlineHelpText>
    <label>Disable Opportunity Trigger</label>
    <type>Checkbox</type>
</CustomField>