force-app/main/default/objects/Settings__mdt/fields/Disable_Post_Close_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Post_Close_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will disable the Post Close Trigger</description>
    <inlineHelpText>This will disable the Post Close Trigger</inlineHelpText>
    <label>Disable Post Close Trigger</label>
    <type>Checkbox</type>
</CustomField>