force-app/main/default/objects/Settings__mdt/fields/Disable_Property_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Property_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will disable the Property Trigger</description>
    <inlineHelpText>This will disable the Property Trigger</inlineHelpText>
    <label>Disable Property Trigger</label>
    <type>Checkbox</type>
</CustomField>