force-app/main/default/objects/Settings__mdt/fields/Disable_Swap_Rate_Update__c.field-meta.xml
<CustomField>
    <fullName>Disable_Swap_Rate_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will disable the update of the Deals when a Swap Rate Record is created</description>
    <inlineHelpText>This will disable the update of the Deals when a Swap Rate Record is created</inlineHelpText>
    <label>Disable Swap Rate Update</label>
    <type>Checkbox</type>
</CustomField>