force-app/main/default/objects/Settings__mdt/fields/Duplicate_Property_Alert_Email__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Property_Alert_Email__c</fullName>
    <description>This is the email addresses that will receive the email alert when a duplicate Property is created</description>
    <inlineHelpText>This is the email addresses that will receive the email alert when a duplicate Property is created</inlineHelpText>
    <label>Duplicate Property Alert Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>