force-app/main/default/objects/Settings__mdt/fields/Enable_Beekin_API_Response_Logging__c.field-meta.xml
<CustomField>
    <fullName>Enable_Beekin_API_Response_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox enable logging for all Beeking API Calls</description>
    <label>Enable_Beekin_API_Response_Logging</label>
    <type>Checkbox</type>
</CustomField>