force-app/main/default/objects/Settings__mdt/fields/Enable_Clear_API_Response_Logging__c.field-meta.xml
<CustomField>
    <fullName>Enable_Clear_API_Response_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will enable the logging of the API response for Clear background check in the API Log Object</description>
    <inlineHelpText>This will enable the logging of the API response for Clear background check in the API Log Object</inlineHelpText>
    <label>Enable Clear API Response Logging</label>
    <type>Checkbox</type>
</CustomField>