force-app/main/default/objects/Settings__mdt/fields/Enable_Clear_Capital_API_Logging__c.field-meta.xml
<CustomField>
    <fullName>Enable_Clear_Capital_API_Logging__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Clear Capital API Logging</label>
    <type>Checkbox</type>
</CustomField>