force-app/main/default/objects/Settings__mdt/fields/Enable_Data_Tape_Change_Email__c.field-meta.xml
<CustomField>
    <fullName>Enable_Data_Tape_Change_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables or Enables the Email Alert that is sent out when a Property is added/removed from a Data Tape</description>
    <inlineHelpText>Disables or Enables the Email Alert that is sent out when a Property is added/removed from a Data Tape</inlineHelpText>
    <label>Enable Data Tape Change Email</label>
    <type>Checkbox</type>
</CustomField>