force-app/main/default/objects/Settings__mdt/fields/Enable_Duplicate_Property_Email__c.field-meta.xml
<CustomField>
    <fullName>Enable_Duplicate_Property_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will enable or disable the email alert when a duplicate Property is added</description>
    <inlineHelpText>This will enable or disable the email alert when a duplicate Property is added</inlineHelpText>
    <label>Enable Duplicate Property Email</label>
    <type>Checkbox</type>
</CustomField>