force-app/main/default/objects/Settings__mdt/fields/Enable_HouseCanary_API_Error_Response_Lo__c.field-meta.xml
<CustomField>
    <fullName>Enable_HouseCanary_API_Error_Response_Lo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable HouseCanary API Error Response Logging</description>
    <label>Enable HouseCanary API Error Response Lo</label>
    <type>Checkbox</type>
</CustomField>