force-app/main/default/objects/Settings__mdt/fields/Enable_HouseCanary_API_Response_Logging__c.field-meta.xml
<CustomField>
    <fullName>Enable_HouseCanary_API_Response_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable HouseCanary API Response Logging when Enable_HouseCanary_API_Error_Response_Logging also enabled only the errors are logged</description>
    <label>Enable HouseCanary API Response Logging</label>
    <type>Checkbox</type>
</CustomField>