force-app/main/default/objects/Settings__mdt/fields/Enable_LandGorilla_API__c.field-meta.xml
<CustomField>
    <fullName>Enable_LandGorilla_API__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable LandGorilla API</label>
    <type>Checkbox</type>
</CustomField>