force-app/main/default/objects/Settings__mdt/fields/Enable_Portal_User_Creation__c.field-meta.xml
<CustomField>
    <fullName>Enable_Portal_User_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable or Disable the creation of Portal Users</description>
    <inlineHelpText>Enable or Disable the creation of Portal Users</inlineHelpText>
    <label>Enable Portal User Creation</label>
    <type>Checkbox</type>
</CustomField>