force-app/main/default/objects/Settings__mdt/fields/Enable_SmartyStreets_API__c.field-meta.xml
<CustomField>
    <fullName>Enable_SmartyStreets_API__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will enable the API call to Smarty Streets when a Property is created or edited</description>
    <inlineHelpText>This will enable the API call to Smarty Streets when a Property is created or edited</inlineHelpText>
    <label>Enable SmartyStreets API</label>
    <type>Checkbox</type>
</CustomField>