force-app/main/default/objects/Settings__mdt/fields/HouseCanary_No_of_DataSync_Days__c.field-meta.xml
<CustomField>
    <fullName>HouseCanary_No_of_DataSync_Days__c</fullName>
    <description>Stores the number of days before HouseCanary sync can happen.</description>
    <inlineHelpText>Stores the number of days before HouseCanary sync can happen.</inlineHelpText>
    <label>HouseCanary No of DataSync Days</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>