force-app/main/default/objects/Settings__mdt/fields/IC_Stage_Validation_Term__c.field-meta.xml
<CustomField>
    <fullName>IC_Stage_Validation_Term__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IC Stage Validation Term</label>
    <type>Checkbox</type>
</CustomField>