force-app/main/default/objects/Settings__mdt/fields/LandGorilla_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>LandGorilla_Endpoint__c</fullName>
    <label>LandGorilla Endpoint</label>
    <type>Url</type>
</CustomField>