force-app/main/default/objects/Settings__mdt/fields/LandGorilla_Password__c.field-meta.xml
<CustomField>
    <fullName>LandGorilla_Password__c</fullName>
    <label>LandGorilla Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>