force-app/main/default/objects/Settings__mdt/fields/LandGorilla_Username__c.field-meta.xml
<CustomField>
    <fullName>LandGorilla_Username__c</fullName>
    <label>LandGorilla Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>