force-app/main/default/objects/Settings__mdt/fields/LandGorllia_ApiName__c.field-meta.xml
<CustomField>
    <fullName>LandGorllia_ApiName__c</fullName>
    <label>LandGorllia ApiName</label>
    <length>12</length>
    <type>Text</type>
</CustomField>