force-app/main/default/objects/Settings__mdt/fields/Minimum_Advance_Batch_Approvers__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Advance_Batch_Approvers__c</fullName>
    <label>Minimum Advance Batch Approvers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>