force-app/main/default/objects/Settings__mdt/fields/Num_of_Days_to_Transfer_Lead__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Days_to_Transfer_Lead__c</fullName>
    <description>The number entered here will control how many days from last action that a Lead will be transferred to the House Account</description>
    <inlineHelpText>The number entered here will control how many days from last action that a Lead will be transferred to the House Account</inlineHelpText>
    <label># of Days to Transfer Lead</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>