force-app/main/default/objects/Settings__mdt/fields/Number_of_Approvers_for_Bridge_IC__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Approvers_for_Bridge_IC__c</fullName>
    <description>This is the number of Approvers required for Bridge IC Approvals</description>
    <inlineHelpText>This is the number of Approvers required for Bridge IC Approvals</inlineHelpText>
    <label>Number of Approvers for Bridge IC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>