force-app/main/default/objects/Settings__mdt/fields/Number_of_Approvers_for_Bridge_Mini_IC__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Approvers_for_Bridge_Mini_IC__c</fullName>
    <label>Number of Approvers for Bridge Mini  IC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>