force-app/main/default/objects/Settings__mdt/fields/Post_Close_Appraisal_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Post_Close_Appraisal_Reduction__c</fullName>
    <description>This is the amount of reduction in the Initial Disbursement for a Deal that will close before the Appraisal is completed</description>
    <inlineHelpText>This is the amount of reduction in the Initial Disbursement for a Deal that will close before the Appraisal is completed</inlineHelpText>
    <label>Post Close Appraisal Reduction</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>