force-app/main/default/objects/Settings__mdt/fields/Request_Beekin_Rental_Data_Validation__c.field-meta.xml
<CustomField>
    <fullName>Request_Beekin_Rental_Data_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Require Beekin Rental Info Valid on deal stage change to Pricing or UW</description>
    <label>Request Beekin Rental Data Validation</label>
    <type>Checkbox</type>
</CustomField>