force-app/main/default/objects/Settings__mdt/fields/Request_HouseCanary_Rental_Data_Validati__c.field-meta.xml
<CustomField>
    <fullName>Request_HouseCanary_Rental_Data_Validati__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Request HouseCanary Rental Data Validation</description>
    <label>Request HouseCanary Rental Data Validati</label>
    <type>Checkbox</type>
</CustomField>