force-app/main/default/objects/Settings__mdt/fields/Require_Address_Val_on_UW_Submit__c.field-meta.xml
<CustomField>
    <fullName>Require_Address_Val_on_UW_Submit__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This will require that the User runs Address Validation (Smarty Streets) before submitting a Deal for approval into Underwriting</description>
    <inlineHelpText>This will require that the User runs Address Validation (Smarty Streets) before submitting a Deal for approval into Underwriting</inlineHelpText>
    <label>Require Address Val on UW Submit</label>
    <type>Checkbox</type>
</CustomField>