force-app/main/default/objects/Settings__mdt/fields/Require_Address_Valid_on_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Require_Address_Valid_on_Pricing__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This will require that the User runs Address Validation (Smarty Streets) before submitting a Pricing Approval</description>
    <inlineHelpText>This will require that the User runs Address Validation (Smarty Streets) before submitting a Pricing Approval</inlineHelpText>
    <label>Require Address Valid on Pricing</label>
    <type>Checkbox</type>
</CustomField>