force-app/main/default/objects/Settings__mdt/fields/Require_AVM_Sync_on_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Require_AVM_Sync_on_Pricing__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This will require that the User runs AVM Sync (RedBell) before submitting a Pricing Approval</description>
    <inlineHelpText>This will require that the User runs AVM Sync (RedBell) before submitting a Pricing Approval</inlineHelpText>
    <label>Require AVM Sync on Pricing</label>
    <type>Checkbox</type>
</CustomField>