force-app/main/default/objects/Settings__mdt/fields/Require_AVM_Sync_on_UW_Submission__c.field-meta.xml
<CustomField>
    <fullName>Require_AVM_Sync_on_UW_Submission__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This will require that the User runs AVM Sync (RedBell) before submitting a Deal into Underwriting</description>
    <inlineHelpText>This will require that the User runs AVM Sync (RedBell) before submitting a Deal into Underwriting</inlineHelpText>
    <label>Require AVM Sync on UW Submission</label>
    <type>Checkbox</type>
</CustomField>