force-app/main/default/objects/Settings__mdt/fields/Require_Beekin_on_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Require_Beekin_on_Pricing__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>This will require that the User run Beekin Rent data before submitting for Pricing Approval</inlineHelpText>
    <label>Require Beekin on Pricing</label>
    <type>Checkbox</type>
</CustomField>