force-app/main/default/objects/Settings__mdt/fields/Require_X_Author_Validation_on_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Require_X_Author_Validation_on_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will require that the User runs X-Author before submitting a Pricing Approval</description>
    <inlineHelpText>This will require that the User runs X-Author before submitting a Pricing Approval</inlineHelpText>
    <label>Require X-Author Validation on Pricing</label>
    <type>Checkbox</type>
</CustomField>