force-app/main/default/objects/Settings__mdt/fields/Require_X_Author_Validation_on_UW_Submis__c.field-meta.xml
<CustomField>
    <fullName>Require_X_Author_Validation_on_UW_Submis__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This will require that the User runs X-Author before submitting a Deal into Underwriting</description>
    <inlineHelpText>This will require that the User runs X-Author before submitting a Deal into Underwriting</inlineHelpText>
    <label>Require X-Author Validation on UW Submis</label>
    <type>Checkbox</type>
</CustomField>