force-app/main/default/objects/Settings__mdt/fields/SecuritizationReview_Email_To__c.field-meta.xml
<CustomField>
    <fullName>SecuritizationReview_Email_To__c</fullName>
    <description>These are the email addresses for sending the email to notify Securitization Counsel that Documents have been uploaded and ready to review</description>
    <inlineHelpText>These are the email addresses for sending the email to notify Securitization Counsel that Documents have been uploaded and ready to review</inlineHelpText>
    <label>SecuritizationReview Email To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>