force-app/main/default/objects/Settings__mdt/fields/Term_Captl_Markets_Post_Closing_Custodin__c.field-meta.xml
<CustomField>
    <fullName>Term_Captl_Markets_Post_Closing_Custodin__c</fullName>
    <description>Term Capital Markets Post Closing Custodian user id</description>
    <label>Term Captl Markets Post Closing Custodin</label>
    <length>18</length>
    <type>Text</type>
</CustomField>