force-app/main/default/objects/Settings__mdt/fields/Validated_Address_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Validated_Address_Threshold__c</fullName>
    <description>Percent of the Properties that need to be validated before a Deal can submitted for Pricing Approval</description>
    <inlineHelpText>Percent of the Properties that need to be validated before a Deal can submitted for Pricing Approval</inlineHelpText>
    <label>Validated Address Threshold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>